[package]
name = "rrbac"
version = "0.1.0"
authors = ["Shahzad Bhatti <bhatti@plexobject.com>"]

[dependencies]
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4"
r2d2 = "*"
r2d2-diesel = "*"

dotenv = { version = "0.10.1" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"]}
log = "0.4"
env_logger = "0.6.2"
evalexpr = "4.1.0"
regex = "1"
time = "0.1.42"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve", "json"]
